src/Mapbender/CoreBundle/Resources/public/sass/modules/_popup.scss
.overlay{
  background:url($imageBasePath + '/overlay.png');
  @include opacity(0);
  @include transition(opacity 0.4s ease-in-out);
}
.popupHead{
  @extend .title;
  margin:0 $space $space $space;
  padding: $space 0 $space/2 0;
  border-bottom:dashed 1px darken(#fff, 30%);
  &.draggable{cursor:move;}
}
.popupButtons{@include absolute('' $space $space 0);}
.popupSubTitle{@extend .labelInput;}
.popupContent, .popupSubContent{
  padding:0 20px;
  margin-bottom: $space;
  height: 92%;
}
.popupSubContent{width: 100%; height: 100%;}
.popup{
  min-width: 300px;
  min-height: 250px;
  position:relative;
  z-index:9999;
  width: $popupModalWidth;
  margin:-1000px auto 0 auto;
  background-color:#f4f4f4;
  padding-bottom:$space;
  background-image:url($contentPatternUrl);
  border: {
      top: solid 1px $secondColor;
      left: solid 1px $thirdColor;
      right: solid 1px $thirdColor;
      bottom: solid 5px $thirdColor;
  }
  @include transition(margin 0.4s ease-in-out);

  &.popupOverflow{
    .popupContent, .popupSubContent{overflow:visible;}
  }
}
.popupContainer{
  // need to hide the container if the popup is not modal
  height:0px;
  width:0px;
  z-index:999;
  @include fixed(0 0 0 0);

  &.ui-draggable-dragging{@include opacity(0.6);}
  &.ui-draggable{
    position:absolute !important; // avoid strange popup growing behaviour
    .popup{margin:80px 0 0 100px;}
    .popupHead{cursor:move;}
  }
  &.modal{
    height:100%;
    width:100%;
    .popup{margin-top:$space*4;}
    .overlay{
      @include opacity(0.9);
      @include fixed(0 0 0 0);
    }
  }

  .button{margin-left:3px;}
}
.ui-resizable-se{
  font-size: 16px;
  @extend .icon;
  @include absolute('' 3px -3px '');
  @include transform(rotate(45deg));
  cursor: default;
  &:before{
    content: "\f054";
    display: block;
  }
}
.popupScroll{
  overflow: auto;
  @include absolute(70px 0 $space*3 0);
}

